Update ExtUtils-MakeMaker to CPAN version 7.22
  [DELTA]

7.22  Mon Aug  8 09:29:02 BST 2016

    No changes since 7.21_01

7.21_01 Sun Aug  7 10:37:53 BST 2016

    Bug fixes:
    - CVE-2016-1238: instmodsh sanitise @INC

7.20  Fri Aug  5 09:39:56 BST 2016

    No changes since 7.19_08

7.19_08 Thu Jul 28 12:31:13 BST 2016

    Bug fixes:
    - CVE-2016-1238: avoid loading VMS::Feature from the default .

7.19_07 Sun Jul  3 15:11:40 BST 2016

    Bug fixes:
    - Restore ordering issue involving OTHERLDFLAGS

7.19_06 Mon Jun 27 12:32:06 BST 2016

    Test fixes:
    - Skip subdirscomplex test on VMS

7.19_05 Mon Jun 20 15:21:52 BST 2016

    Doc fixes:
    - fix typos and add subdirs text to MakeMaker.pm

7.19_04 Tue Jun 14 11:16:19 BST 2016

    Bug fixes:
    - prevent EUMM::Locale from warning with old Win32.pm

    Doc fixes:
    - added examples for running tests in subdirs

7.19_03 Mon Jun 13 14:22:46 BST 2016

    Bug fixes:
    - Fix test warnings in MM_Unix.pm when in core

7.19_02 Mon Jun 13 09:57:37 BST 2016

    Bug fixes:
    - Check for ascii locale using normalized name

7.19_01 Thu Jun  2 14:26:20 BST 2016

    Bug fixes:
    - Cygwin: avoid libperl.dll.dll.a
    - Fix basic.t tests on Win32 in core

--- a/cpan/ExtUtils-MakeMaker/lib/ExtUtils/MakeMaker/FAQ.pod
+++ b/cpan/ExtUtils-MakeMaker/lib/ExtUtils/MakeMaker/FAQ.pod
@@ -1,6 +1,6 @@
 package ExtUtils::MakeMaker::FAQ;
 
-our $VERSION = '7.18';
+our $VERSION = '7.22';
 $VERSION = eval $VERSION;
 
 1;
@@ -119,6 +119,29 @@ And then set PERL5LIB to F<~/tmp/lib/perl5>.  This works well when you
 have multiple modules to work with.  It also ensures that the module
 goes through its full installation process which may modify it.
 Again, L<local::lib> may assist you here.
+
+=item How can I organize tests into subdirectories and have them run?
+
+Let's take the following test directory structure:
+
+    t/foo/sometest.t
+    t/bar/othertest.t
+    t/bar/baz/anothertest.t
+
+Now, inside of the C<WriteMakeFile()> function in your F<Makefile.PL>, specify
+where your tests are located with the C<test> directive:
+
+    test => {TESTS => 't/*.t t/*/*.t t/*/*/*.t'}
+
+The first entry in the string will run all tests in the top-level F<t/> 
+directory. The second will run all test files located in any subdirectory under
+F<t/>. The third, runs all test files within any subdirectory within any other
+subdirectory located under F<t/>.
+
+Note that you do not have to use wildcards. You can specify explicitly which
+subdirectories to run tests in:
+
+    test => {TESTS => 't/*.t t/foo/*.t t/bar/baz/*.t'}
 
 =item PREFIX vs INSTALL_BASE from Module::Build::Cookbook
 
