Return REPLACEMENT for UTF-8 empty malformation
The previous commit no longer allows this so-called malformation under
DEBUGGING builds, except if code explicitly changes to request it (or
already explicitly does, but there are no instances of this in CPAN).

If it is explicitly allowed, prior to this commit it returned NUL.  If
it wasn't allowed, it returned 0.  Most code won't treat these as
different.  When returning NUL, it basically is making nothing into
something, which might be exploitable some way by an attacker.  The
Unicode accepted way of dealing with malformations is to replace them
with the REPLACEMENT CHARACTER, and so this commit changes things to
conform to this.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -342,9 +342,9 @@ deprecation warning since Perl v5.18.  They now die.
 =item *
 
 Calling the functions C<utf8n_to_uvchr> and its derivatives, while
-passing a string length of 0, and specifying that this is allowed is now
-asserted against in DEBUGGING builds.  If you have nothing to decode,
-you shouldn't call the decode function.
+passing a string length of 0 is now asserted against in DEBUGGING
+builds, and otherwise returns the Unicode REPLACEMENT CHARACTER.   If
+you have nothing to decode, you shouldn't call the decode function.
 
 =back
 
