--- a/pod/perlrun.pod
+++ b/pod/perlrun.pod
@@ -7,7 +7,7 @@ perlrun - how to execute the Perl interpreter
 B<perl>	S<[ B<-sTtuUWX> ]>
 	S<[ B<-hv> ] [ B<-V>[:I<configvar>] ]>
 	S<[ B<-cw> ] [ B<-d>[B<t>][:I<debugger>] ] [ B<-D>[I<number/list>] ]>
-	S<[ B<-pna> ] [ B<-F>I<pattern> ] [ B<-l>[I<octal>] ] [ B<-0>[I<octal/hexadecimal>] ]>
+	S<[ B<-PNpna> ] [ B<-F>I<pattern> ] [ B<-l>[I<octal>] ] [ B<-0>[I<octal/hexadecimal>] ]>
 	S<[ B<-I>I<dir> ] [ B<-m>[B<->]I<module> ] [ B<-M>[B<->]I<'module...'> ] [ B<-f> ]>
 	S<[ B<-C [I<number/list>] >]>
 	S<[ B<-S> ]>
@@ -684,6 +684,22 @@ A consequence of this is that B<-MI<MODULE>=number> never does a version check,
 unless C<I<MODULE>::import()> itself is set up to do a version check, which
 could happen for example if I<MODULE> inherits from L<Exporter>.
 
+=item B<-N>
+X<-N>
+
+causes Perl to assume the following loop around your program, which
+makes it iterate over filename arguments in a fashion similar to,
+but safer than B<-n> (documented below):
+
+  LINE:
+    while (<<>>) {
+	...		# your program goes here
+    }
+
+Note that the lines are not printed by default.  See L</-P> to have
+lines printed.  If a file named by an argument cannot be opened for
+some reason, Perl warns you about it and moves on to the next file.
+
 =item B<-n>
 X<-n>
 
@@ -718,6 +734,27 @@ you can fix if you follow the example under B<-0>.
 C<BEGIN> and C<END> blocks may be used to capture control before or after
 the implicit program loop, just as in I<awk>.
 
+=item B<-P>
+X<-P>
+
+causes Perl to assume the following loop around your program, which
+makes it iterate over filename arguments in a fashion similar to,
+but safer than B<-p> (documented below):
+
+
+  LINE:
+    while (<<>>) {
+	...		# your program goes here
+    } continue {
+	print or die "-p destination: $!\n";
+    }
+
+If a file named by an argument cannot be opened for some reason, Perl
+warns you about it, and moves on to the next file.  Note that the
+lines are printed automatically.  An error occurring during printing is
+treated as fatal.  To suppress printing use the B<-N> switch.  A B<-P>
+overrides a B<-N> or B<-n> switch.
+
 =item B<-p>
 X<-p>
 
@@ -736,7 +773,7 @@ If a file named by an argument cannot be opened for some reason, Perl
 warns you about it, and moves on to the next file.  Note that the
 lines are printed automatically.  An error occurring during printing is
 treated as fatal.  To suppress printing use the B<-n> switch.  A B<-p>
-overrides a B<-n> switch.
+overrides a B<-n> or B<-N> switch.
 
 C<BEGIN> and C<END> blocks may be used to capture control before or after
 the implicit loop, just as in I<awk>.
