Backport patch for CVE-2017-12883 to Perl 5.22.
Provided by Scott Court.

Committer: Add Scott Court to AUTHORS.

For: RT #132134

--- a/AUTHORS
+++ b/AUTHORS
@@ -1068,6 +1068,7 @@ Sawyer X			<xsawyerx@cpan.org>
 Schuyler Erle			<schuyler@oreilly.com>
 Scott A Crosby			<scrosby@cs.rice.edu>
 Scott Bronson			<bronson@rinspin.com>
+Scott Court			<z5t1@z5t1.com>
 Scott Gifford			<sgifford@tir.com>
 Scott Henry			<scotth@sgi.com>
 Scott Lanning			<lannings@who.int>
